# splatcom

./: .gitignore  Cargo.toml  Dockerfile  README.md  client.py  sender.py
basic_client/: pyproject.toml
basic_client/src/: sender.py
basic_client/src/basic_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: clanker.rs  main.rs  message.rs  util.rs
