[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_client"
version = "0.0.1"
authors = [
  { name="Jack Comey", email="jack.rhys.comey@gmail.com" },
]
description = "Basic sender test client for Splatcom"
readme = "README.md"
requires-python = ">=3.13.2"